// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`TopologyFloorPlanWidget should render correctly 1`] = `
<DocumentFragment>
  .c0 {
  height: 100%;
  width: 100%;
}

.c0 .ant-card {
  height: 100%;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-flex-direction: column;
  -ms-flex-direction: column;
  flex-direction: column;
  border-radius: 8px;
  padding: 12px 16px;
  border: 1px solid var(--acx-neutrals-20);
  box-shadow: 0px 2px 4px rgba(51,51,51,0.08);
}

.c0 .ant-card-head {
  display: none;
  padding: 0;
  border-bottom: none;
  min-height: 0;
  margin-bottom: 10px;
}

.c0 .ant-card-head-title {
  padding: 0;
}

.c0 .ant-card-head-title .ant-space .ant-space-item:last-child {
  line-height: 0;
}

.c0 .ant-card-head-wrapper {
  -webkit-align-items: start;
  -webkit-box-align: start;
  -ms-flex-align: start;
  align-items: start;
}

.c0 .ant-card-extra {
  padding: 0;
}

.c0 .ant-card-body {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-flex-direction: column;
  -ms-flex-direction: column;
  flex-direction: column;
  -webkit-box-flex: 1;
  -webkit-flex-grow: 1;
  -ms-flex-positive: 1;
  flex-grow: 1;
  padding: 0;
  font-size: var(--acx-body-4-font-size);
  line-height: var(--acx-body-4-line-height);
}

.c1 {
  font-family: var(--acx-accent-brand-font);
  font-size: var(--acx-headline-4-font-size);
  line-height: var(--acx-headline-4-line-height);
  color: var(--acx-primary-black);
  font-weight: var(--acx-headline-4-font-weight-bold);
}

.c2 .ant-radio-group {
  border-radius: 20px;
  background-color: var(--acx-neutrals-20);
  vertical-align: top;
  overflow: hidden;
}

.c2 .ant-radio-button-wrapper {
  color: var(--acx-primary-black);
  background-color: transparent;
  border: none;
  box-shadow: none;
  border-radius: 20px;
}

.c2 .ant-radio-button-wrapper:not(:first-child)::before {
  display: none;
}

.c2 .ant-radio-button-wrapper-checked {
  color: var(--acx-primary-white);
  background-color: var(--acx-primary-black);
}

.c2 .ant-radio-button-wrapper span:nth-child(2) {
  vertical-align: middle;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
}

.c2 .ant-radio-button-wrapper:not(.ant-radio-button-wrapper-checked,.ant-radio-button-wrapper-disabled):hover {
  background-color: var(--acx-neutrals-30);
}

.c2 svg {
  vertical-align: middle;
  margin-right: 8px;
}

.c2 path {
  stroke: var(--acx-primary-black);
}

.c2 .ant-radio-button-wrapper-checked path {
  stroke: var(--acx-primary-white);
}

.c2 .ant-radio-button-wrapper-checked {
  cursor: default;
}

.c2 .ant-radio-button-wrapper-checked:not(.ant-radio-button-wrapper-disabled):hover {
  color: var(--acx-primary-white);
}

.c2 .ant-radio-group-small svg {
  width: var(--acx-body-4-font-size);
  height: var(--acx-body-4-font-size);
}

.c2 .ant-radio-group-small .ant-radio-button-wrapper {
  font-size: var(--acx-body-4-font-size);
  line-height: var(--acx-body-4-line-height);
  height: 24px;
}

.c2 .ant-radio-group-small .ant-radio-button-wrapper span:nth-child(2) {
  margin: 4px 16px;
}

.c2 .ant-radio-group-large svg {
  width: var(--acx-body-3-font-size);
  height: var(--acx-body-3-font-size);
}

.c2 .ant-radio-group-large .ant-radio-button-wrapper {
  font-size: var(--acx-body-3-font-size);
  line-height: var(--acx-body-3-line-height);
  height: 28px;
}

.c2 .ant-radio-group-large .ant-radio-button-wrapper span:nth-child(2) {
  margin: 4px 32px;
}

<div
    class="c0"
    type="default"
  >
    <div
      class="ant-card"
    >
      <div
        class="ant-card-head"
      >
        <div
          class="ant-card-head-wrapper"
        >
          <div
            class="ant-card-head-title"
          >
            <div
              class="ant-space ant-space-horizontal ant-space-align-center"
            >
              <div
                class="ant-space-item"
              >
                <div
                  class="c1"
                />
              </div>
            </div>
          </div>
          <div
            class="ant-card-extra"
          >
            <div
              class="ant-space ant-space-horizontal ant-space-align-center"
            />
          </div>
        </div>
      </div>
      <div
        class="ant-card-body"
      >
        <div
          style="overflow: visible; height: 0px; width: 0px;"
        >
          <div
            style="width: 1280px; height: 800px;"
          >
            <div
              style="text-align: left;"
            >
              <div
                class="c2"
              >
                <div
                  class="ant-radio-group ant-radio-group-outline ant-radio-group-small"
                >
                  <label
                    class="ant-radio-button-wrapper"
                  >
                    <span
                      class="ant-radio-button"
                    >
                      <input
                        class="ant-radio-button-input"
                        type="radio"
                        value="topology"
                      />
                      <span
                        class="ant-radio-button-inner"
                      />
                    </span>
                    <span>
                      Topology
                    </span>
                  </label>
                  <label
                    class="ant-radio-button-wrapper ant-radio-button-wrapper-checked"
                  >
                    <span
                      class="ant-radio-button ant-radio-button-checked"
                    >
                      <input
                        checked=""
                        class="ant-radio-button-input"
                        type="radio"
                        value="floor-plans"
                      />
                      <span
                        class="ant-radio-button-inner"
                      />
                    </span>
                    <span>
                      Floor Plans
                    </span>
                  </label>
                </div>
              </div>
            </div>
            <div>
              Floor Plan
            </div>
          </div>
        </div>
        <div
          class="resize-triggers"
        >
          <div
            class="expand-trigger"
          >
            <div
              style="width: 1281px; height: 801px;"
            />
          </div>
          <div
            class="contract-trigger"
          />
        </div>
      </div>
    </div>
  </div>
</DocumentFragment>
`;

exports[`TopologyFloorPlanWidget should render floorplan topology widget under AP overview 1`] = `
<DocumentFragment>
  .c0 {
  height: 100%;
  width: 100%;
}

.c0 .ant-card {
  height: 100%;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-flex-direction: column;
  -ms-flex-direction: column;
  flex-direction: column;
  border-radius: 8px;
  padding: 12px 16px;
  border: 1px solid var(--acx-neutrals-20);
  box-shadow: 0px 2px 4px rgba(51,51,51,0.08);
}

.c0 .ant-card-head {
  display: none;
  padding: 0;
  border-bottom: none;
  min-height: 0;
  margin-bottom: 10px;
}

.c0 .ant-card-head-title {
  padding: 0;
}

.c0 .ant-card-head-title .ant-space .ant-space-item:last-child {
  line-height: 0;
}

.c0 .ant-card-head-wrapper {
  -webkit-align-items: start;
  -webkit-box-align: start;
  -ms-flex-align: start;
  align-items: start;
}

.c0 .ant-card-extra {
  padding: 0;
}

.c0 .ant-card-body {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-flex-direction: column;
  -ms-flex-direction: column;
  flex-direction: column;
  -webkit-box-flex: 1;
  -webkit-flex-grow: 1;
  -ms-flex-positive: 1;
  flex-grow: 1;
  padding: 0;
  font-size: var(--acx-body-4-font-size);
  line-height: var(--acx-body-4-line-height);
}

.c1 {
  font-family: var(--acx-accent-brand-font);
  font-size: var(--acx-headline-4-font-size);
  line-height: var(--acx-headline-4-line-height);
  color: var(--acx-primary-black);
  font-weight: var(--acx-headline-4-font-weight-bold);
}

.c2 .ant-radio-group {
  border-radius: 20px;
  background-color: var(--acx-neutrals-20);
  vertical-align: top;
  overflow: hidden;
}

.c2 .ant-radio-button-wrapper {
  color: var(--acx-primary-black);
  background-color: transparent;
  border: none;
  box-shadow: none;
  border-radius: 20px;
}

.c2 .ant-radio-button-wrapper:not(:first-child)::before {
  display: none;
}

.c2 .ant-radio-button-wrapper-checked {
  color: var(--acx-primary-white);
  background-color: var(--acx-primary-black);
}

.c2 .ant-radio-button-wrapper span:nth-child(2) {
  vertical-align: middle;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
}

.c2 .ant-radio-button-wrapper:not(.ant-radio-button-wrapper-checked,.ant-radio-button-wrapper-disabled):hover {
  background-color: var(--acx-neutrals-30);
}

.c2 svg {
  vertical-align: middle;
  margin-right: 8px;
}

.c2 path {
  stroke: var(--acx-primary-black);
}

.c2 .ant-radio-button-wrapper-checked path {
  stroke: var(--acx-primary-white);
}

.c2 .ant-radio-button-wrapper-checked {
  cursor: default;
}

.c2 .ant-radio-button-wrapper-checked:not(.ant-radio-button-wrapper-disabled):hover {
  color: var(--acx-primary-white);
}

.c2 .ant-radio-group-small svg {
  width: var(--acx-body-4-font-size);
  height: var(--acx-body-4-font-size);
}

.c2 .ant-radio-group-small .ant-radio-button-wrapper {
  font-size: var(--acx-body-4-font-size);
  line-height: var(--acx-body-4-line-height);
  height: 24px;
}

.c2 .ant-radio-group-small .ant-radio-button-wrapper span:nth-child(2) {
  margin: 4px 16px;
}

.c2 .ant-radio-group-large svg {
  width: var(--acx-body-3-font-size);
  height: var(--acx-body-3-font-size);
}

.c2 .ant-radio-group-large .ant-radio-button-wrapper {
  font-size: var(--acx-body-3-font-size);
  line-height: var(--acx-body-3-line-height);
  height: 28px;
}

.c2 .ant-radio-group-large .ant-radio-button-wrapper span:nth-child(2) {
  margin: 4px 32px;
}

<div
    class="c0"
    type="default"
  >
    <div
      class="ant-card"
    >
      <div
        class="ant-card-head"
      >
        <div
          class="ant-card-head-wrapper"
        >
          <div
            class="ant-card-head-title"
          >
            <div
              class="ant-space ant-space-horizontal ant-space-align-center"
            >
              <div
                class="ant-space-item"
              >
                <div
                  class="c1"
                />
              </div>
            </div>
          </div>
          <div
            class="ant-card-extra"
          >
            <div
              class="ant-space ant-space-horizontal ant-space-align-center"
            />
          </div>
        </div>
      </div>
      <div
        class="ant-card-body"
      >
        <div
          style="overflow: visible; height: 0px; width: 0px;"
        >
          <div
            style="width: 1280px; height: 800px;"
          >
            <div
              style="text-align: left;"
            >
              <div
                class="c2"
              >
                <div
                  class="ant-radio-group ant-radio-group-outline ant-radio-group-small"
                >
                  <label
                    class="ant-radio-button-wrapper"
                  >
                    <span
                      class="ant-radio-button"
                    >
                      <input
                        class="ant-radio-button-input"
                        type="radio"
                        value="topology"
                      />
                      <span
                        class="ant-radio-button-inner"
                      />
                    </span>
                    <span>
                      Topology
                    </span>
                  </label>
                  <label
                    class="ant-radio-button-wrapper ant-radio-button-wrapper-checked"
                  >
                    <span
                      class="ant-radio-button ant-radio-button-checked"
                    >
                      <input
                        checked=""
                        class="ant-radio-button-input"
                        type="radio"
                        value="floor-plans"
                      />
                      <span
                        class="ant-radio-button-inner"
                      />
                    </span>
                    <span>
                      Floor Plans
                    </span>
                  </label>
                </div>
              </div>
            </div>
            <div
              style="width: 100%; height: calc(100% - 80px); justify-content: center; align-items: center; display: inline-flex;"
            >
              <div
                class="ant-empty"
              >
                <div
                  class="ant-empty-image"
                >
                  <svg
                    class="ant-empty-img-default"
                    height="152"
                    viewBox="0 0 184 152"
                    width="184"
                    xmlns="http://www.w3.org/2000/svg"
                  >
                    <g
                      fill="none"
                      fill-rule="evenodd"
                    >
                      <g
                        transform="translate(24 31.67)"
                      >
                        <ellipse
                          class="ant-empty-img-default-ellipse"
                          cx="67.797"
                          cy="106.89"
                          rx="67.797"
                          ry="12.668"
                        />
                        <path
                          class="ant-empty-img-default-path-1"
                          d="M122.034 69.674L98.109 40.229c-1.148-1.386-2.826-2.225-4.593-2.225h-51.44c-1.766 0-3.444.839-4.592 2.225L13.56 69.674v15.383h108.475V69.674z"
                        />
                        <path
                          class="ant-empty-img-default-path-2"
                          d="M101.537 86.214L80.63 61.102c-1.001-1.207-2.507-1.867-4.048-1.867H31.724c-1.54 0-3.047.66-4.048 1.867L6.769 86.214v13.792h94.768V86.214z"
                          transform="translate(13.56)"
                        />
                        <path
                          class="ant-empty-img-default-path-3"
                          d="M33.83 0h67.933a4 4 0 0 1 4 4v93.344a4 4 0 0 1-4 4H33.83a4 4 0 0 1-4-4V4a4 4 0 0 1 4-4z"
                        />
                        <path
                          class="ant-empty-img-default-path-4"
                          d="M42.678 9.953h50.237a2 2 0 0 1 2 2V36.91a2 2 0 0 1-2 2H42.678a2 2 0 0 1-2-2V11.953a2 2 0 0 1 2-2zM42.94 49.767h49.713a2.262 2.262 0 1 1 0 4.524H42.94a2.262 2.262 0 0 1 0-4.524zM42.94 61.53h49.713a2.262 2.262 0 1 1 0 4.525H42.94a2.262 2.262 0 0 1 0-4.525zM121.813 105.032c-.775 3.071-3.497 5.36-6.735 5.36H20.515c-3.238 0-5.96-2.29-6.734-5.36a7.309 7.309 0 0 1-.222-1.79V69.675h26.318c2.907 0 5.25 2.448 5.25 5.42v.04c0 2.971 2.37 5.37 5.277 5.37h34.785c2.907 0 5.277-2.421 5.277-5.393V75.1c0-2.972 2.343-5.426 5.25-5.426h26.318v33.569c0 .617-.077 1.216-.221 1.789z"
                        />
                      </g>
                      <path
                        class="ant-empty-img-default-path-5"
                        d="M149.121 33.292l-6.83 2.65a1 1 0 0 1-1.317-1.23l1.937-6.207c-2.589-2.944-4.109-6.534-4.109-10.408C138.802 8.102 148.92 0 161.402 0 173.881 0 184 8.102 184 18.097c0 9.995-10.118 18.097-22.599 18.097-4.528 0-8.744-1.066-12.28-2.902z"
                      />
                      <g
                        class="ant-empty-img-default-g"
                        transform="translate(149.65 15.383)"
                      >
                        <ellipse
                          cx="20.654"
                          cy="3.167"
                          rx="2.849"
                          ry="2.815"
                        />
                        <path
                          d="M5.698 5.63H0L2.898.704zM9.259.704h4.985V5.63H9.259z"
                        />
                      </g>
                    </g>
                  </svg>
                </div>
                <div
                  class="ant-empty-description"
                >
                  This Access Point is not placed on any floor plan
                </div>
                <div
                  class="ant-empty-footer"
                >
                  <a
                    href="/undefined/t/venues/7231da344778480d88f37f0cca1c534f/venue-details/overview"
                  >
                    Go to floor plans to place the Access Point
                  </a>
                </div>
              </div>
            </div>
          </div>
        </div>
        <div
          class="resize-triggers"
        >
          <div
            class="expand-trigger"
          >
            <div
              style="width: 1281px; height: 801px;"
            />
          </div>
          <div
            class="contract-trigger"
          />
        </div>
      </div>
    </div>
  </div>
</DocumentFragment>
`;

exports[`TopologyFloorPlanWidget should render floorplan topology widget under Switch overview 1`] = `
<DocumentFragment>
  .c0 {
  height: 100%;
  width: 100%;
}

.c0 .ant-card {
  height: 100%;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-flex-direction: column;
  -ms-flex-direction: column;
  flex-direction: column;
  border-radius: 8px;
  padding: 12px 16px;
  border: 1px solid var(--acx-neutrals-20);
  box-shadow: 0px 2px 4px rgba(51,51,51,0.08);
}

.c0 .ant-card-head {
  display: none;
  padding: 0;
  border-bottom: none;
  min-height: 0;
  margin-bottom: 10px;
}

.c0 .ant-card-head-title {
  padding: 0;
}

.c0 .ant-card-head-title .ant-space .ant-space-item:last-child {
  line-height: 0;
}

.c0 .ant-card-head-wrapper {
  -webkit-align-items: start;
  -webkit-box-align: start;
  -ms-flex-align: start;
  align-items: start;
}

.c0 .ant-card-extra {
  padding: 0;
}

.c0 .ant-card-body {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-flex-direction: column;
  -ms-flex-direction: column;
  flex-direction: column;
  -webkit-box-flex: 1;
  -webkit-flex-grow: 1;
  -ms-flex-positive: 1;
  flex-grow: 1;
  padding: 0;
  font-size: var(--acx-body-4-font-size);
  line-height: var(--acx-body-4-line-height);
}

.c1 {
  font-family: var(--acx-accent-brand-font);
  font-size: var(--acx-headline-4-font-size);
  line-height: var(--acx-headline-4-line-height);
  color: var(--acx-primary-black);
  font-weight: var(--acx-headline-4-font-weight-bold);
}

.c2 .ant-radio-group {
  border-radius: 20px;
  background-color: var(--acx-neutrals-20);
  vertical-align: top;
  overflow: hidden;
}

.c2 .ant-radio-button-wrapper {
  color: var(--acx-primary-black);
  background-color: transparent;
  border: none;
  box-shadow: none;
  border-radius: 20px;
}

.c2 .ant-radio-button-wrapper:not(:first-child)::before {
  display: none;
}

.c2 .ant-radio-button-wrapper-checked {
  color: var(--acx-primary-white);
  background-color: var(--acx-primary-black);
}

.c2 .ant-radio-button-wrapper span:nth-child(2) {
  vertical-align: middle;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
}

.c2 .ant-radio-button-wrapper:not(.ant-radio-button-wrapper-checked,.ant-radio-button-wrapper-disabled):hover {
  background-color: var(--acx-neutrals-30);
}

.c2 svg {
  vertical-align: middle;
  margin-right: 8px;
}

.c2 path {
  stroke: var(--acx-primary-black);
}

.c2 .ant-radio-button-wrapper-checked path {
  stroke: var(--acx-primary-white);
}

.c2 .ant-radio-button-wrapper-checked {
  cursor: default;
}

.c2 .ant-radio-button-wrapper-checked:not(.ant-radio-button-wrapper-disabled):hover {
  color: var(--acx-primary-white);
}

.c2 .ant-radio-group-small svg {
  width: var(--acx-body-4-font-size);
  height: var(--acx-body-4-font-size);
}

.c2 .ant-radio-group-small .ant-radio-button-wrapper {
  font-size: var(--acx-body-4-font-size);
  line-height: var(--acx-body-4-line-height);
  height: 24px;
}

.c2 .ant-radio-group-small .ant-radio-button-wrapper span:nth-child(2) {
  margin: 4px 16px;
}

.c2 .ant-radio-group-large svg {
  width: var(--acx-body-3-font-size);
  height: var(--acx-body-3-font-size);
}

.c2 .ant-radio-group-large .ant-radio-button-wrapper {
  font-size: var(--acx-body-3-font-size);
  line-height: var(--acx-body-3-line-height);
  height: 28px;
}

.c2 .ant-radio-group-large .ant-radio-button-wrapper span:nth-child(2) {
  margin: 4px 32px;
}

<div
    class="c0"
    type="default"
  >
    <div
      class="ant-card"
    >
      <div
        class="ant-card-head"
      >
        <div
          class="ant-card-head-wrapper"
        >
          <div
            class="ant-card-head-title"
          >
            <div
              class="ant-space ant-space-horizontal ant-space-align-center"
            >
              <div
                class="ant-space-item"
              >
                <div
                  class="c1"
                />
              </div>
            </div>
          </div>
          <div
            class="ant-card-extra"
          >
            <div
              class="ant-space ant-space-horizontal ant-space-align-center"
            />
          </div>
        </div>
      </div>
      <div
        class="ant-card-body"
      >
        <div
          style="overflow: visible; height: 0px; width: 0px;"
        >
          <div
            style="width: 1280px; height: 800px;"
          >
            <div
              style="text-align: left;"
            >
              <div
                class="c2"
              >
                <div
                  class="ant-radio-group ant-radio-group-outline ant-radio-group-small"
                >
                  <label
                    class="ant-radio-button-wrapper"
                  >
                    <span
                      class="ant-radio-button"
                    >
                      <input
                        class="ant-radio-button-input"
                        type="radio"
                        value="topology"
                      />
                      <span
                        class="ant-radio-button-inner"
                      />
                    </span>
                    <span>
                      Topology
                    </span>
                  </label>
                  <label
                    class="ant-radio-button-wrapper ant-radio-button-wrapper-checked"
                  >
                    <span
                      class="ant-radio-button ant-radio-button-checked"
                    >
                      <input
                        checked=""
                        class="ant-radio-button-input"
                        type="radio"
                        value="floor-plans"
                      />
                      <span
                        class="ant-radio-button-inner"
                      />
                    </span>
                    <span>
                      Floor Plans
                    </span>
                  </label>
                </div>
              </div>
            </div>
            <div
              style="width: 100%; height: calc(100% - 80px); justify-content: center; align-items: center; display: inline-flex;"
            >
              <div
                class="ant-empty"
              >
                <div
                  class="ant-empty-image"
                >
                  <svg
                    class="ant-empty-img-default"
                    height="152"
                    viewBox="0 0 184 152"
                    width="184"
                    xmlns="http://www.w3.org/2000/svg"
                  >
                    <g
                      fill="none"
                      fill-rule="evenodd"
                    >
                      <g
                        transform="translate(24 31.67)"
                      >
                        <ellipse
                          class="ant-empty-img-default-ellipse"
                          cx="67.797"
                          cy="106.89"
                          rx="67.797"
                          ry="12.668"
                        />
                        <path
                          class="ant-empty-img-default-path-1"
                          d="M122.034 69.674L98.109 40.229c-1.148-1.386-2.826-2.225-4.593-2.225h-51.44c-1.766 0-3.444.839-4.592 2.225L13.56 69.674v15.383h108.475V69.674z"
                        />
                        <path
                          class="ant-empty-img-default-path-2"
                          d="M101.537 86.214L80.63 61.102c-1.001-1.207-2.507-1.867-4.048-1.867H31.724c-1.54 0-3.047.66-4.048 1.867L6.769 86.214v13.792h94.768V86.214z"
                          transform="translate(13.56)"
                        />
                        <path
                          class="ant-empty-img-default-path-3"
                          d="M33.83 0h67.933a4 4 0 0 1 4 4v93.344a4 4 0 0 1-4 4H33.83a4 4 0 0 1-4-4V4a4 4 0 0 1 4-4z"
                        />
                        <path
                          class="ant-empty-img-default-path-4"
                          d="M42.678 9.953h50.237a2 2 0 0 1 2 2V36.91a2 2 0 0 1-2 2H42.678a2 2 0 0 1-2-2V11.953a2 2 0 0 1 2-2zM42.94 49.767h49.713a2.262 2.262 0 1 1 0 4.524H42.94a2.262 2.262 0 0 1 0-4.524zM42.94 61.53h49.713a2.262 2.262 0 1 1 0 4.525H42.94a2.262 2.262 0 0 1 0-4.525zM121.813 105.032c-.775 3.071-3.497 5.36-6.735 5.36H20.515c-3.238 0-5.96-2.29-6.734-5.36a7.309 7.309 0 0 1-.222-1.79V69.675h26.318c2.907 0 5.25 2.448 5.25 5.42v.04c0 2.971 2.37 5.37 5.277 5.37h34.785c2.907 0 5.277-2.421 5.277-5.393V75.1c0-2.972 2.343-5.426 5.25-5.426h26.318v33.569c0 .617-.077 1.216-.221 1.789z"
                        />
                      </g>
                      <path
                        class="ant-empty-img-default-path-5"
                        d="M149.121 33.292l-6.83 2.65a1 1 0 0 1-1.317-1.23l1.937-6.207c-2.589-2.944-4.109-6.534-4.109-10.408C138.802 8.102 148.92 0 161.402 0 173.881 0 184 8.102 184 18.097c0 9.995-10.118 18.097-22.599 18.097-4.528 0-8.744-1.066-12.28-2.902z"
                      />
                      <g
                        class="ant-empty-img-default-g"
                        transform="translate(149.65 15.383)"
                      >
                        <ellipse
                          cx="20.654"
                          cy="3.167"
                          rx="2.849"
                          ry="2.815"
                        />
                        <path
                          d="M5.698 5.63H0L2.898.704zM9.259.704h4.985V5.63H9.259z"
                        />
                      </g>
                    </g>
                  </svg>
                </div>
                <div
                  class="ant-empty-description"
                >
                  This Switch is not placed on any floor plan
                </div>
                <div
                  class="ant-empty-footer"
                >
                  <a
                    href="/undefined/t/venues/7231da344778480d88f37f0cca1c534f/venue-details/overview"
                  >
                    Go to floor plans to place the Switch
                  </a>
                </div>
              </div>
            </div>
          </div>
        </div>
        <div
          class="resize-triggers"
        >
          <div
            class="expand-trigger"
          >
            <div
              style="width: 1281px; height: 801px;"
            />
          </div>
          <div
            class="contract-trigger"
          />
        </div>
      </div>
    </div>
  </div>
</DocumentFragment>
`;
